v5.0
-----
+ Added platform icons to items on the wishlist page
+ Added active listing total to marketplace homepage
+ Added WSGF certifications for 21:9 (Ultra-Widescreen) and 4K UHD certified games
+ Added support for IndieGameStand price histories
+ Redesigned the navigation on the options page
: Fixed bug where card drops were calculating incorrectly for some users
: Fixed a bug where sales on packs were not correctly highlighting
: Made a ton of behind-the-scenes bugfixes and code updates

v4.9.1
-----
: Fixed a bug where long app names and tags were breaking layout on some pages
: Fixed a bug where some language codes were being interpreted incorrectly

v4.9
-----
+ Non-sale games are now hidden from the "Specials" search
+ Added option to display PCGamingWiki links on store pages
+ Added ability to sort "All Games" list by install size if logged in
+ Added filter to "All Games" list for installed/not installed if logged in
+ Added pricing history and formatting support for BRL (thanks drizzle!)
+ Added Polish translation by mrmahon
+ Profile links now display on private profiles
: The formatting of tags has changed from square to rounded
: Options now save automatically without the need to click the save button
: Enhanced F2P detection on homepage, genre page, and search results

v4.8
-----
+ Added option to exclude Free To Play games from being highlighted
+ Added new tag: "friends recommend" which links to the recommendation page
+ Added "Endless Scrolling" mode for search results pages
+ Added Simplified Chinese translation by Bin Dong
+ Added option to replace account name in header with community name
: Fixed a bug where "Compare" links were only showing if your language was English
: Fixed a bug where friends with nicknames would incorrectly show 3 "Compare" links

v4.7.1
-----
: Fixed several issues with new price history code which should now work correctly
: Fixed an issue with new wording of "Four pack" being used and not showing a split price
